// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GhostButton Block adds the bgDanger modifier 1`] = `
.c0 {
  background: transparent;
  border-color: #646464;
  color: #646464;
}

.c0:hover,
.c0:focus {
  background: transparent;
  border-color: #191919;
  box-shadow: none;
  color: #191919;
}

.c1 {
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  background-color: #7D7D7D;
  border-radius: 2px;
  border: solid 1px transparent;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.5rem 1.5rem;
  outline: none;
  -webkit-transition: all 200ms ease;
  transition: all 200ms ease;
  background-color: #FF4949;
}

.c1:hover,
.c1:focus {
  background-color: #8a8a8a;
  box-shadow: 0 8px 8px 0 rgba(100,100,100,0.4);
}

.c2 {
  font-size: 0.75rem;
  font-weight: 300;
  text-transform: uppercase;
}

.c3 {
  font-size: 1rem;
}

<button
  className="c0 c1"
>
  <span
    className="c2"
  >
    Login
  </span>
  <span
    aria-hidden={true}
    className="fa fa-home c3"
  />
</button>
`;

exports[`GhostButton Block adds the fullWidth modifier 1`] = `
.c0 {
  background: transparent;
  border-color: #646464;
  color: #646464;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c0:hover,
.c0:focus {
  background: transparent;
  border-color: #191919;
  box-shadow: none;
  color: #191919;
}

.c1 {
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  background-color: #7D7D7D;
  border-radius: 2px;
  border: solid 1px transparent;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.5rem 1.5rem;
  outline: none;
  -webkit-transition: all 200ms ease;
  transition: all 200ms ease;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c1:hover,
.c1:focus {
  background-color: #8a8a8a;
  box-shadow: 0 8px 8px 0 rgba(100,100,100,0.4);
}

.c2 {
  font-size: 0.75rem;
  font-weight: 300;
  text-transform: uppercase;
}

.c3 {
  font-size: 1rem;
}

<button
  className="c0 c1"
>
  <span
    className="c2"
  >
    Login
  </span>
  <span
    aria-hidden={true}
    className="fa fa-home c3"
  />
</button>
`;

exports[`GhostButton Block adds the hoverBgDanger modifier 1`] = `
.c0 {
  background: transparent;
  border-color: #646464;
  color: #646464;
}

.c0:hover,
.c0:focus {
  background: transparent;
  border-color: #191919;
  box-shadow: none;
  color: #191919;
}

.c1 {
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  background-color: #7D7D7D;
  border-radius: 2px;
  border: solid 1px transparent;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.5rem 1.5rem;
  outline: none;
  -webkit-transition: all 200ms ease;
  transition: all 200ms ease;
}

.c1:hover,
.c1:focus {
  background-color: #8a8a8a;
  box-shadow: 0 8px 8px 0 rgba(100,100,100,0.4);
}

.c1:hover,
.c1:focus {
  background-color: #ff6262;
}

.c2 {
  font-size: 0.75rem;
  font-weight: 300;
  text-transform: uppercase;
}

.c3 {
  font-size: 1rem;
}

<button
  className="c0 c1"
>
  <span
    className="c2"
  >
    Login
  </span>
  <span
    aria-hidden={true}
    className="fa fa-home c3"
  />
</button>
`;

exports[`GhostButton Block adds the hoverCustom modifier 1`] = `
.c0 {
  background: transparent;
  border-color: #646464;
  color: #646464;
}

.c0:hover,
.c0:focus {
  background: transparent;
  border-color: #191919;
  box-shadow: none;
  color: #191919;
}

.c0:hover,
.c0:focus {
  border-color: undefined;
  color: undefined;
}

.c1 {
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  background-color: #7D7D7D;
  border-radius: 2px;
  border: solid 1px transparent;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.5rem 1.5rem;
  outline: none;
  -webkit-transition: all 200ms ease;
  transition: all 200ms ease;
}

.c1:hover,
.c1:focus {
  background-color: #8a8a8a;
  box-shadow: 0 8px 8px 0 rgba(100,100,100,0.4);
}

.c2 {
  font-size: 0.75rem;
  font-weight: 300;
  text-transform: uppercase;
}

<button
  className="c0 c1"
>
  <span
    className="c2"
  >
    Login
  </span>
</button>
`;

exports[`GhostButton Block adds the hoverDanger modifier 1`] = `
.c0 {
  background: transparent;
  border-color: #646464;
  color: #646464;
}

.c0:hover,
.c0:focus {
  background: transparent;
  border-color: #191919;
  box-shadow: none;
  color: #191919;
}

.c0:hover,
.c0:focus {
  border-color: #FF4949;
  color: #FF4949;
}

.c1 {
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  background-color: #7D7D7D;
  border-radius: 2px;
  border: solid 1px transparent;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.5rem 1.5rem;
  outline: none;
  -webkit-transition: all 200ms ease;
  transition: all 200ms ease;
}

.c1:hover,
.c1:focus {
  background-color: #8a8a8a;
  box-shadow: 0 8px 8px 0 rgba(100,100,100,0.4);
}

.c2 {
  font-size: 0.75rem;
  font-weight: 300;
  text-transform: uppercase;
}

<button
  className="c0 c1"
>
  <span
    className="c2"
  >
    Login
  </span>
</button>
`;

exports[`GhostButton Block adds the hoverInfo modifier 1`] = `
.c0 {
  background: transparent;
  border-color: #646464;
  color: #646464;
}

.c0:hover,
.c0:focus {
  background: transparent;
  border-color: #191919;
  box-shadow: none;
  color: #191919;
}

.c0:hover,
.c0:focus {
  border-color: #1FB6FF;
  color: #1FB6FF;
}

.c1 {
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  background-color: #7D7D7D;
  border-radius: 2px;
  border: solid 1px transparent;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.5rem 1.5rem;
  outline: none;
  -webkit-transition: all 200ms ease;
  transition: all 200ms ease;
}

.c1:hover,
.c1:focus {
  background-color: #8a8a8a;
  box-shadow: 0 8px 8px 0 rgba(100,100,100,0.4);
}

.c2 {
  font-size: 0.75rem;
  font-weight: 300;
  text-transform: uppercase;
}

<button
  className="c0 c1"
>
  <span
    className="c2"
  >
    Login
  </span>
</button>
`;

exports[`GhostButton Block adds the hoverSuccess modifier 1`] = `
.c0 {
  background: transparent;
  border-color: #646464;
  color: #646464;
}

.c0:hover,
.c0:focus {
  background: transparent;
  border-color: #191919;
  box-shadow: none;
  color: #191919;
}

.c0:hover,
.c0:focus {
  border-color: #13CE66;
  color: #13CE66;
}

.c1 {
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  background-color: #7D7D7D;
  border-radius: 2px;
  border: solid 1px transparent;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.5rem 1.5rem;
  outline: none;
  -webkit-transition: all 200ms ease;
  transition: all 200ms ease;
}

.c1:hover,
.c1:focus {
  background-color: #8a8a8a;
  box-shadow: 0 8px 8px 0 rgba(100,100,100,0.4);
}

.c2 {
  font-size: 0.75rem;
  font-weight: 300;
  text-transform: uppercase;
}

<button
  className="c0 c1"
>
  <span
    className="c2"
  >
    Login
  </span>
</button>
`;

exports[`GhostButton Block adds the hoverWarning modifier 1`] = `
.c0 {
  background: transparent;
  border-color: #646464;
  color: #646464;
}

.c0:hover,
.c0:focus {
  background: transparent;
  border-color: #191919;
  box-shadow: none;
  color: #191919;
}

.c0:hover,
.c0:focus {
  border-color: #FFC82C;
  color: #FFC82C;
}

.c1 {
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  background-color: #7D7D7D;
  border-radius: 2px;
  border: solid 1px transparent;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.5rem 1.5rem;
  outline: none;
  -webkit-transition: all 200ms ease;
  transition: all 200ms ease;
}

.c1:hover,
.c1:focus {
  background-color: #8a8a8a;
  box-shadow: 0 8px 8px 0 rgba(100,100,100,0.4);
}

.c2 {
  font-size: 0.75rem;
  font-weight: 300;
  text-transform: uppercase;
}

<button
  className="c0 c1"
>
  <span
    className="c2"
  >
    Login
  </span>
</button>
`;

exports[`GhostButton Block renders correctly 1`] = `
.c0 {
  background: transparent;
  border-color: #646464;
  color: #646464;
}

.c0:hover,
.c0:focus {
  background: transparent;
  border-color: #191919;
  box-shadow: none;
  color: #191919;
}

.c1 {
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  background-color: #7D7D7D;
  border-radius: 2px;
  border: solid 1px transparent;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.5rem 1.5rem;
  outline: none;
  -webkit-transition: all 200ms ease;
  transition: all 200ms ease;
}

.c1:hover,
.c1:focus {
  background-color: #8a8a8a;
  box-shadow: 0 8px 8px 0 rgba(100,100,100,0.4);
}

.c2 {
  font-size: 0.75rem;
  font-weight: 300;
  text-transform: uppercase;
}

.c3 {
  font-size: 1rem;
}

<button
  className="c0 c1"
>
  <span
    className="c2"
  >
    Login
  </span>
  <span
    aria-hidden={true}
    className="fa fa-home c3"
  />
</button>
`;

exports[`GhostButton Block uses default styles if no hoverColor is provided with hoverCustom modifier 1`] = `
.c0 {
  background: transparent;
  border-color: #646464;
  color: #646464;
}

.c0:hover,
.c0:focus {
  background: transparent;
  border-color: #191919;
  box-shadow: none;
  color: #191919;
}

.c0:hover,
.c0:focus {
  border-color: #191919;
  color: #191919;
}

.c1 {
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  background-color: #7D7D7D;
  border-radius: 2px;
  border: solid 1px transparent;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.5rem 1.5rem;
  outline: none;
  -webkit-transition: all 200ms ease;
  transition: all 200ms ease;
}

.c1:hover,
.c1:focus {
  background-color: #8a8a8a;
  box-shadow: 0 8px 8px 0 rgba(100,100,100,0.4);
}

.c2 {
  font-size: 0.75rem;
  font-weight: 300;
  text-transform: uppercase;
}

<button
  className="c0 c1"
>
  <span
    className="c2"
  >
    Login
  </span>
</button>
`;
